Add portrait mode overlay: require landscape on mobile devices

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Pirata+One&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <div id="rotateOverlay">
+    <div class="rotate-content">
+      <div class="rotate-icon">📱</div>
+      <h2>Rotate Your Device</h2>
+      <p>Cannon Cove plays best in landscape mode</p>
+    </div>
+  </div>
   <canvas id="gameCanvas"></canvas>
   <script type="module" src="/src/main.js"></script>
 </body>
