Add favicon, OG meta tags, and Twitter card for rich link previews

--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <meta name="description" content="Cannon Cove — A pirate artillery game. Aim your cannon, account for the wind, and blast your rival to splinters!" />
+  <meta name="description"
+    content="Cannon Cove — A pirate artillery game. Aim your cannon, account for the wind, and blast your rival to splinters!" />
   <title>Cannon Cove — Pirate Artillery Game</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+
+  <!-- Open Graph (Facebook, iMessage, Discord, Slack, etc.) -->
+  <meta property="og:title" content="Cannon Cove — Pirate Artillery Game" />
+  <meta property="og:description"
+    content="Aim your cannon, account for the wind, and blast your rival to splinters! A free browser-based pirate artillery game." />
+  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Cannon Cove" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Cannon Cove — Pirate Artillery Game" />
+  <meta name="twitter:description"
+    content="Aim your cannon, account for the wind, and blast your rival to splinters!" />
+  <meta name="twitter:image" content="/og-image.png" />
+
+  <!-- Theme color for mobile browsers -->
+  <meta name="theme-color" content="#0B1D3A" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Pirata+One&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Pirata+One&display=swap"
+    rel="stylesheet" />
 </head>
+
 <body>
   <div id="rotateOverlay">
     <div class="rotate-content">
@@ -20,4 +47,5 @@
   <canvas id="gameCanvas"></canvas>
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
