Fix loading flash: remove old CSS loading text, add proper HTML loading screen

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
       <p>Cannon Cove plays best in landscape mode</p>
     </div>
   </div>
+  <div id="loadingScreen">
+    <div class="loading-content">
+      <div style="font-size:48px;margin-bottom:16px;">⚓</div>
+      <h1 style="font-family:'Pirata One',Georgia,serif;font-size:36px;color:#F4A623;margin:0 0 12px;">Cannon Cove</h1>
+      <p style="font-size:14px;color:rgba(245,240,232,0.6);margin:0;">Preparing the fleet…</p>
+    </div>
+  </div>
   <canvas id="gameCanvas"></canvas>
   <script type="module" src="/src/main.js"></script>
 </body>
