fix: use absolute URLs for OG/Twitter image meta tags

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <meta property="og:title" content="Cannon Cove — Pirate Artillery Game" />
   <meta property="og:description"
     content="Aim your cannon, account for the wind, and blast your rival to splinters! A free browser-based pirate artillery game." />
-  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:image" content="https://cannoncove.app/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://cannoncove.app" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Cannon Cove" />
 
@@ -33,7 +36,7 @@
   <meta name="twitter:title" content="Cannon Cove — Pirate Artillery Game" />
   <meta name="twitter:description"
     content="Aim your cannon, account for the wind, and blast your rival to splinters!" />
-  <meta name="twitter:image" content="/og-image.png" />
+  <meta name="twitter:image" content="https://cannoncove.app/og-image.png" />
 
   <!-- Theme color for mobile browsers -->
   <meta name="theme-color" content="#0B1D3A" />
