fix: loading screen stuck + add Product Hunt badge
- Wrap Supabase init in 5s timeout so game loads even if Supabase is down
- Add try/catch around settings load for resilience
- Add Product Hunt featured badge to menu (hidden during gameplay)

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
       </p>
     </div>
   </div>
+  <div id="phBadge" style="position:fixed;bottom:16px;left:50%;transform:translateX(-50%);z-index:100;display:block;">
+    <a href="https://www.producthunt.com/products/cannon-cove?embed=true&amp;utm_source=badge-featured&amp;utm_medium=badge&amp;utm_campaign=badge-cannon-cove" target="_blank" rel="noopener noreferrer"><img alt="Cannon Cove - Aim. Fire. Plunder. | Product Hunt" width="250" height="54" src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=1080640&amp;theme=light&amp;t=1771301036846"></a>
+  </div>
   <canvas id="gameCanvas"></canvas>
   <script type="module" src="/src/main.js"></script>
 </body>
